[gd_scene load_steps=11 format=2]

[ext_resource path="res://ui/assets/fonts/typewriter.tres" type="DynamicFont" id=1]
[ext_resource path="res://ui/scenes/main/title_screen/title_screen.gd" type="Script" id=2]
[ext_resource path="res://ui/assets/art/general/logo/hymn logo for dark bg.png" type="Texture" id=3]
[ext_resource path="res://ui/assets/art/backgrounds/Hymn_BG 3 Dark.png" type="Texture" id=4]
[ext_resource path="res://ui/scenes/main/credits/credits.tscn" type="PackedScene" id=5]
[ext_resource path="res://ui/assets/sound/music/sleepless - intro.ogg" type="AudioStream" id=8]
[ext_resource path="res://ui/scenes/main/settings/settings.tscn" type="PackedScene" id=11]

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 1, 1, 1, 0.27451 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 1, 1, 1, 0.431373 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0, 0, 0, 0.498039 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="TitleScreen" type="Control"]
script = ExtResource( 2 )

[node name="Background" type="TextureRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
texture = ExtResource( 4 )

[node name="Content" type="Control" parent="."]

[node name="Logo" type="TextureRect" parent="Content"]
margin_left = 243.0
margin_top = -24.0
margin_right = 1737.0
margin_bottom = 549.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="Buttons" type="Control" parent="Content"]
margin_left = 960.0
margin_top = 540.0
margin_right = 960.0
margin_bottom = 540.0

[node name="LevelSelectButton" type="Button" parent="Content/Buttons"]
margin_left = -160.0
margin_top = 20.0
margin_right = 160.0
margin_bottom = 120.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
text = "Start"
__meta__ = {
"_editor_description_": "

"
}

[node name="SettingsButton" type="Button" parent="Content/Buttons"]
margin_left = -160.0
margin_top = 140.0
margin_right = 160.0
margin_bottom = 240.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
text = "Settings"

[node name="CreditsButton2" type="Button" parent="Content/Buttons"]
margin_left = -160.0
margin_top = 260.0
margin_right = 160.0
margin_bottom = 360.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
text = "Credits"

[node name="ExitButton" type="Button" parent="Content/Buttons"]
margin_left = -160.0
margin_top = 380.0
margin_right = 160.0
margin_bottom = 480.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
text = "Exit"

[node name="Settings" parent="." instance=ExtResource( 11 )]
visible = false

[node name="Credits" parent="." instance=ExtResource( 5 )]
visible = false

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
autoplay = true
bus = "Music"

[connection signal="pressed" from="Content/Buttons/LevelSelectButton" to="." method="_on_LevelSelectButton_pressed"]
[connection signal="pressed" from="Content/Buttons/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="Content/Buttons/CreditsButton2" to="." method="_on_CreditsButton_pressed"]
[connection signal="pressed" from="Content/Buttons/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="settings_back_button_pressed" from="Settings" to="." method="_on_Settings_settings_back_button_pressed"]
[connection signal="credits_back_button_pressed" from="Credits" to="." method="_on_Credits_credits_back_button_pressed"]
